# listings-service

./: Cargo.toml  listings.toml
contrib/init-db/: init.sql
migrations/: 20250223132145_listing.sql
src/: entity.rs  lib.rs  main.rs  server.rs
src/state/: mutate.rs  query.rs
