[package]
name = "listings-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
config = { version = "0.15.8", default-features = false, features = ["toml"] }
prost = "0.13.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
time = { version = "0.3.37", features = ["serde"] }
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tonic = "0.12.3"
tracing = "0.1.41"

[dependencies.sellershut-core]
git = "https://github.com/sellershut/sellershut-core"
features = ["rpc-server-listings", "serde", "time"]

[dependencies.sellershut-services]
git = "https://github.com/sellershut/services-lib"
features = ["api", "id-gen", "postgres", "tracing"]
